--- a/test/fixtures/albums.yml
+++ b/test/fixtures/albums.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: albums
+#
+#  id              :integer          not null, primary key
+#  band_id         :integer          not null
+#  recording_style :string           not null
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#  name            :string
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
